--- a/DataStructsAndAlgos/implementations/javascript/package.json
+++ b/DataStructsAndAlgos/implementations/javascript/package.json
@@ -9,8 +9,9 @@
     "build": "babel src --out-dir dist",
     "Stack": "yarn build && node dist/Stack/Stack.test.js",
     "LinkedList": "yarn build && node dist/LinkedList/LinkedList.test.js",
-    "BST": "yarn build && node dist/Trees/BST.test.js",
-    "Queue": "yarn build && node dist/Queue/Queue.test.js"
+    "BST": "yarn build && node dist/Trees/BST/BST.test.js",
+    "Queue": "yarn build && node dist/Queue/Queue.test.js",
+    "Heap": "yarn build && node dist/Trees/Heap/Heap.test.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
