--- a/DataStructsAndAlgos/implementations/javascript/package.json
+++ b/DataStructsAndAlgos/implementations/javascript/package.json
@@ -13,7 +13,8 @@
     "BST": "yarn build && node dist/DataStructures/Trees/BST/BST.test.js",
     "Queue": "yarn build && node dist/DataStructures/Queue/Queue.test.js",
     "Heap": "yarn build && node dist/DataStructures/Trees/Heap/Heap.test.js",
-    "Graph": "yarn build && node dist/DataStructures/Graphs/Graph/Graph.test.js"
+    "Graph": "yarn build && node dist/DataStructures/Graphs/Graph/Graph.test.js",
+    "Fibonacci": "yarn build && node dist/Techniques/DP/Fibonacci/Fibonacci.test.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
